# speakeasy

./: README.md  pyproject.toml
speakeasy/: __init__.py  cache.py  constants.py  main.py  player.py  rewrite.py  session.py  splitter.py  tts.py  ui.py
